@@ -1,5 +1,9 @@
 2011-05-02 Jannis Pohlmann <jannis@xfce.org>
 
+	- Implement coarsening in the Walshaw algorithm. Add Edge:__eq().
+
+2011-05-02 Jannis Pohlmann <jannis@xfce.org>
+
 	- Add simple force based algorithm based on Hu. Now we have 2-3 to
 	compare. Next task: implement the multilevel approach in one of the
 	algorithms.
